Call support firrst conversion

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -19,12 +19,10 @@
       </div>
       <p
         class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8">
-        A starter template built with Astro and Tailwind CSS for your next
-        project
+        AI Phone Calls just like Humans
       </p>
       <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
-        Putting together a directory website was a challenge. Superstash lets
-        you focus on the content and makes the entire process effortless.
+        Automate all your phone calls with AI
       </p>
     </div>
     <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
