Hero page changes

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -33,22 +33,22 @@
       <a
         class="items-center justify-center h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
         href="https://lexingtonthemes.com"
-        >Lexington Themes &nbsp; &rarr;
+        >Create free account now  &nbsp; &rarr;
       </a>
     </div>
     <dl
       class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
       <div class="text-gray-500">
         <strong class="text-gray-700"
-          >Astro, Tailwind CSS and Alpine.js</strong
+          >24/7 AI Receptionist</strong
         > ━ This are the popular technologies behind Astrosaas.
       </div>
       <div class="text-gray-500">
-        <strong class="text-gray-700">Includes 6 pages</strong> ━ You will find
+        <strong class="text-gray-700">AI Answering Service</strong> ━ You will find
         this landing, faq, terms,privacy,sign up and sign in pages.
       </div>
       <div class="text-gray-500">
-        <strong class="text-gray-700">Different section</strong> ━ The starter
+        <strong class="text-gray-700">AI Cold Caller</strong> ━ The starter
         includes different feature sections, a pricing table, testmionial, CTA
         and full forms. more.
       </div>
