--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -10,7 +10,7 @@
             class="font-semibold text-accent-600"
             ><span class="absolute inset-0" aria-hidden="true"></span>
             <span class="block lg:inline">
-              More free & Premium templates <span aria-hidden="true"
+              AI voice agents at scale <span aria-hidden="true"
                 >&rarr;</span
               >
             </span>
@@ -27,12 +27,14 @@
     </div>
     <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
       <a
-        class="items-center justify-center border-gray-200 h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
-        href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
-      >
+      class="items-center justify-center border-gray-200 h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
+      href="https://zcal.co/i/cL7eACvt"
+      target="_blank" 
+      rel="noopener noreferrer"
+    >Contact Sales</a>
       <a
         class="items-center justify-center h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
-        href="https://lexingtonthemes.com"
+        href="https://app.callsupport.ai/login"
         >Create free account now  &nbsp; &rarr;
       </a>
     </div>
