--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -38,8 +38,7 @@
                   Built with Astro.js.
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
-                Astro is an all-in-one web framework for building fast,
-                content-focused websites.
+                CallSupport are Human like AI Voice Calls
               </div>
             </div><div>
               <div>
