--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -34,7 +34,7 @@
     >Contact Sales</a>
       <a
         class="items-center justify-center h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
-        href="https://app.callsupport.ai/login"
+        href="https://app.callsupport.ai/"
         >Create free account now  &nbsp; &rarr;
       </a>
     </div>
@@ -43,16 +43,15 @@
       <div class="text-gray-500">
         <strong class="text-gray-700"
           >24/7 AI Receptionist</strong
-        > ━ This are the popular technologies behind Astrosaas.
+        > ━ Manage inbound calls with an AI receptionist that greets, answers questions, and forwards calls to right person
       </div>
       <div class="text-gray-500">
-        <strong class="text-gray-700">AI Answering Service</strong> ━ You will find
-        this landing, faq, terms,privacy,sign up and sign in pages.
+        <strong class="text-gray-700">AI Answering Service</strong> ━ Get an Answering service
+        which can answer all your customer questions, trained on your data, and self improving
       </div>
       <div class="text-gray-500">
-        <strong class="text-gray-700">AI Cold Caller</strong> ━ The starter
-        includes different feature sections, a pricing table, testmionial, CTA
-        and full forms. more.
+        <strong class="text-gray-700">AI Outbound calls</strong> ━ Boost lead generation with AI-driven outbound calls that qualify prospects, collect key details, and schedule follow-ups, so your sales team focuses on top-quality leads with smart call management.
+
       </div>
     </dl>
 
