--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -128,9 +128,9 @@
             </li>
             <li>
               <a
-                href="https://x.com/Mike_Andreuzza"
+                href="https://x.com/callsupport"
                 class="hover:text-black">
-                @Mike_Andreuzza
+                @callsupport
               </a>
             </li>
           </ul>
