--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -12,14 +12,14 @@
       class="grid max-w-2xl grid-cols-1 py-4 mt-24 -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-2 "
     >
       <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-        <h3 class="mt-5 text-lg text-black font-display">Greedy</h3>
+        <h3 class="mt-5 text-lg text-black font-display">Starter</h3>
         <p class="mt-2 text-sm text-gray-500">
           Amazing for those attached to money with glue
         </p>
         <p
           class="order-first text-5xl font-light tracking-tight text-black font-display"
         >
-          $0
+         €149
         </p>
         <ul
           role="list"
@@ -65,18 +65,18 @@
         <a
           class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
           aria-label="Wannabe tier"
-          href="/register">Get started</a
+          href="https://app.callsupport.ai">Get started</a
         >
       </section>
       <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-        <h3 class="mt-5 text-lg text-black font-display">Wannabe</h3>
+        <h3 class="mt-5 text-lg text-black font-display">Pro</h3>
         <p class="mt-2 text-sm text-gray-500">
           Good for those trying to get there, but are too far from it.
         </p>
         <p
           class="order-first text-5xl font-light tracking-tight text-black font-display"
         >
-          $2
+        €450
         </p>
         <ul
           role="list"
@@ -131,20 +131,20 @@
         <a
           class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
           aria-label="Wannabe tier"
-          href="/register">Get started</a
+          href="https://app.callsupport.ai">Get started</a
         >
       </section>
       <section
         class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black  lg:order-none"
       >
-        <h3 class="mt-5 text-lg text-white font-display">Indie Hacker</h3>
+        <h3 class="mt-5 text-lg text-white font-display">Growth</h3>
         <p class="mt-2 text-sm text-accent-100">
           Perfect for those leaving 9-5 and working 24/7.
         </p>
         <p
           class="order-first text-5xl font-light tracking-tight text-white font-display"
         >
-          $29
+          €900
         </p>
         <ul
           role="list"
@@ -217,18 +217,18 @@
         <a
           class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
           aria-label="Indie hacker tier"
-          href="/register">Get started</a
+          href="https://app.callsupport.ai">Get started</a
         >
       </section>
       <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-        <h3 class="mt-5 text-lg text-black font-display">Big fish</h3>
+        <h3 class="mt-5 text-lg text-black font-display">Enterprise</h3>
         <p class="mt-2 text-sm text-gray-500">
           For even the biggest enterprise companies.
         </p>
         <p
           class="order-first text-5xl font-light tracking-tight text-black font-display"
         >
-          $99
+          Contact us
         </p>
         <ul
           role="list"
@@ -281,10 +281,15 @@
           </li>
         </ul>
         <a
-          class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
-          aria-label="Big fish tier"
-          href="/register">Get started</a
-        >
+        class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
+        aria-label="Big fish tier"
+        href="https://zcal.co/i/cL7eACvt"
+        target="_blank" 
+        rel="noopener noreferrer"
+      >
+        Get started
+      </a>
+      
       </section>
     </div>
     <div class="mx-auto pt-12 lg:py-16">
