--- a/src/components/landing/Onhold.astro
+++ b/src/components/landing/Onhold.astro
@@ -75,7 +75,7 @@
                 <div class="flex flex-col sm:flex-row">
                   <a
                     class="inline-flex items-center justify-center w-full px-6 py-3 text-center text-white duration-200 bg-white/0 custom-blur font-medium hover:bg-white/5 rounded-xl border-2 border-white hover:text-white focus:outline-none lg:w-auto focus-visible:outline-black focus-visible:ring-black"
-                    href="https://twitter.com/Mike_Andreuzza"
+                    href="https://twitter.com/callsupport"
                     >Follow Michael &nbsp; &nbsp; &rarr;
                   </a>
                 </div>
