--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -90,9 +90,9 @@
             class="mt-4 space-y-1">
             <li>
               <a
-                href="https://github.com/michael-andreuzza/astrosaas"
+                href="https://call-support-organization.gitbook.io/call-support"
                 class="hover:text-black">
-                GitHub repo
+                Documentation
               </a>
             </li>
           </ul>
@@ -109,7 +109,7 @@
               <a
                 href="https://lexingtonthemes.com/"
                 class="hover:text-black">
-                Lexington Themes
+                CallSupport
               </a>
             </li>
           </ul>
@@ -144,14 +144,11 @@
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-6">
     <div class="border-t pt-6 border-gray-200">
       <p class="text-sm text-neutral-600 lg:col-span-2">
-        © 2024 Lexington Themes. All rights reserved. Lexington Themes is not
-        affiliated with Astro or Tailwind Labs team, nor is it endorsed by or
-        sponsored by this ones. A side project by <a
+        © 2024 CallSupport. All rights reserved. CallSupport runs the biggest and best AI Voice Agents in the world<a
           class="text-sm text-black hover:text-accent-400 underline"
           href="https://michaelandreuzza.com/"
           >Michael Andreuzza</a
-        > This website was built with Astro &amp; Tailwind. Crafted in Åland Islands,
-        Finland.
+        > 
       </p>
     </div>
   </div>
