--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -6,8 +6,8 @@
       <p
         class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display"
       >
-        Discover the experiences and <span class="sm:block"
-          >feedback from satisfied customers</span
+        See what customers are  <span class="sm:block"
+          >saying about us</span
         >
       </p>
     </div>
@@ -71,7 +71,7 @@
               </svg>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-star stroke-accent-500"
+                class="icon icon-tabler icon-tabler-star  fill-accent-500 stroke-accent-500"
                 width="20"
                 height="20"
                 viewBox="0 0 24 24"
@@ -87,17 +87,17 @@
                 ></path>
               </svg>
               <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-star stroke-accent-500"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="none"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-star fill-accent-500 stroke-accent-500"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="none"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                 <path
                   d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z"
@@ -105,13 +105,12 @@
               </svg>
             </div>
             <p class="lg:text-sm text-gray-500 mt-4">
-              "I've always been concerned about privacy online, but since using
-              this platform, I feel more empowered and in control of my personal
-              data."
+              "Daaaamn. Thats impressive :D . Just tried it. With a German number and if we feed it all the information, that would be super strong
+              "
             </p>
           </div>
           <footer class="mt-8">
-            <p class="lg:text-sm text-gray-500 font-display">Michael A</p>
+            <p class="lg:text-sm text-gray-500 font-display">Felix Kleine</p>
             <img class="h-8 mt-4" src="/assets/brands/Attentive.svg" alt="" />
           </footer>
         </div>
@@ -207,12 +206,11 @@
               </svg>
             </div>
             <p class="lg:text-sm text-gray-500 mt-4">
-              "As a professional working with sensitive information, I needed a
-              communication solution that prioritizes security"
+              "Our return rate reduced significantly after implementing this, because AI could answer most of Customer inquiries"
             </p>
           </div>
           <footer class="mt-8">
-            <p class="lg:text-sm text-gray-500 font-display">John D</p>
+            <p class="lg:text-sm text-gray-500 font-display">Yassin Baum</p>
             <img class="h-8 mt-4" src="/assets/brands/Coinbase.svg" alt="" />
           </footer>
         </div>
@@ -308,9 +306,7 @@
               </svg>
             </div>
             <p class="lg:text-sm text-gray-500 mt-4">
-              "As a digital nomad, maintaining my privacy while communicating is
-              crucial. This platform has become my go-to choice for secure
-              messaging."
+              "Using the product was a Wow moment for me. I did not know, AI voice was this good. Thought we were 3 years away from this quality of AI Voice Agents"
             </p>
           </div>
           <footer class="mt-8">
