--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -7,12 +7,12 @@
         <p
           class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display"
         >
-          I am a slightly longer heading than the others
+        What are business building with Call Support
         </p><p
           class="mt-4 text-lg text-na mx-auto tracking-tight text-gray-500"
         >
-          If you could kick the person in the pants responsible for most of your
-          trouble, you wouldn't sit for a month
+         The best ideas come from those closest to the business.
+
         </p>
       </div>
     </div>
@@ -35,10 +35,10 @@
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
-                  Built with Astro.js.
+                  AI Receptionist
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
-                CallSupport are Human like AI Voice Calls
+                24/7 Receptionist to greet customers, answer questions, write down information and forward to relevant people
               </div>
             </div><div>
               <div>
@@ -53,12 +53,10 @@
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
-                  Styled with Tailwind CSS.
+                  Outbound Caller
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
-                Tailwind CSS generates styles by searching for class names in
-                HTML, JavaScript, and templates, and then outputs them in a
-                single CSS file.
+                AI agent to call existing leads, gather important information, ask any qualifying questions
               </div>
             </div><div>
               <div>
@@ -73,11 +71,10 @@
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
-                  Relived with Alpine.js
+                  Automatic Appointment Booker
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
-                Alpine is a rugged, minimal tool for for adding behavior to your
-                markup, similar to jQuery but for the modern web.
+                Phone assistant which can automatically book meetings in your calendar, send reminder messages etc
               </div>
             </div><div>
               <div>
@@ -92,12 +89,10 @@
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
-                  Keyboard accessible.
+                  Customer Feedback Collection
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
-                Everything I build is keyboard accessible, and I meticulously
-                write the markup to deliver the best screenreader experience I
-                can provide.
+                Collect automatic feedback from customers after every call
               </div>
             </div><div>
               <div>
