--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -41,7 +41,7 @@
             ></ion-icon>
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-            Developer experience
+            Customer feedback collection
           </p>
         </div><p class="text-gray-500 text-sm mt-4">
           Everything I build is keyboard accessible, and I meticulously write
