--- a/src/components/Forms/Signup.astro
+++ b/src/components/Forms/Signup.astro
@@ -13,7 +13,7 @@
             <h2
               class="font-medium leading-tight text-black text-xl font-display"
             >
-              Sign up to AstroSaaS
+              Sign up to CallSupport
             </h2><div class="py-3">
               <span class="w-full inline-flex relative mt-3 z-0"
                 ><button
