--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -34,7 +34,7 @@
                   fill="#d94dd1"
                   stroke="#d94dd1"
                 ></path></svg
-              ><span class="ml-2.5"> Astro</span>
+              ><span class="ml-2.5"> AI Receptionist </span>
             </div>
             <div class="flex items-center ml-6 text-sm font-medium text-black">
               <svg
@@ -48,41 +48,38 @@
                   fill="#38bdf9"
                   d="M128 0C93.867 0 72.533 17.067 64 51.2 76.8 34.133 91.733 27.733 108.8 32c9.737 2.434 16.697 9.499 24.401 17.318C145.751 62.057 160.275 76.8 192 76.8c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C174.249 14.743 159.725 0 128 0zM64 76.8C29.867 76.8 8.533 93.867 0 128c12.8-17.067 27.733-23.467 44.8-19.2 9.737 2.434 16.697 9.499 24.401 17.318C81.751 138.857 96.275 153.6 128 153.6c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C110.249 91.543 95.725 76.8 64 76.8z"
                 ></path></svg
-              ><span class="ml-2.5"> Tailwind CSS</span>
+              ><span class="ml-2.5"> 24/7 AI Answering</span>
             </div>
           </div>
           <p
             class="mt-12 text-3xl font-black tracking-tight text-black uppercase font-display">
-            Lexington Themes
+            Call Support - AI Voice Agents
           </p>
           <p
             class="max-w-2xl mt-4 text-base font-medium tracking-tight text-black">
-            Free and premium multipage themes &amp; UI Kits For freelancers,
-            developers, businesses, and personal use. Beautifully crafted with
-            Astro.js, and Tailwind CSS
+            AI Voice Agents
             <span class="lg:block">— Simple &amp; easy to customise.</span>
           </p>
           <p
             class="mt-8 text-2xl tracking-tight text-black fon4t-medium font-display lg:pl-4 lg:border-l-4 border-accent-600">
-            Use the code<span class="text-accent-600"> LEXINGTON30</span>
+            Try it out for <span class="text-accent-600"> free </span>
             and
             <span class="text-black opacity-70 md:block"
-              >get a 30% discount on the bundle</span
+              >talk upto 10 minutes</span
             >
           </p>
           <p
             class="max-w-2xl mt-8 text-base font-medium tracking-tight text-black">
-            Get lifetime access to every theme available on Lexington Themes for
-            <span class="text-accent-600">$199</span> and own them forever. Plus,
-            new themes, lifetime updates, use on unlimited projects and enjoy lifetime
-            support. No subscription required!
+            Buy more minute packages as you
+            <span class="text-accent-600">grow</span>. <br>
+             We scale you, as your needs increase!
           </p>
 
           <div class="mt-12">
             <a
               href="https://lexingtonthemes.com"
               class="inline-flex items-center justify-center w-full gap-4 px-6 py-3 text-sm font-medium text-white transition rounded-xl bg-accent-600 group active:text-gray-900/60 active:transition-none outline-offset-2 hover:bg-white hover:text-black lg:w-auto"
-              >See all templates <span>→</span>
+              >Create Free account now <span>→</span>
             </a>
           </div>
         </div>
