--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -26,7 +26,7 @@
             fill="#808CFF"
           ></path>
         </svg>
-        <span class="font-bold font-display">AstroSaas</span>
+        <span class="font-bold font-display">CallSupport</span>
       </a>
       <div
         class="md:grid md:grid-cols-2 xl:grid-cols-4 md:gap-8 text-sm text-gray-400 lg:col-span-3">
@@ -65,13 +65,13 @@
                 Privacy
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a
                 href="/signup"
                 class="hover:text-black">
                 Sign up
               </a>
-            </li>
+            </li> -->
             <li>
               <a
                 href="/signup"
@@ -100,17 +100,13 @@
 
         <div>
           <h3 class="text-lg text-black font-medium tracking-tight">
-            More themes
+            Contact
           </h3>
           <ul
             role="list"
             class="mt-4 space-y-1">
             <li>
-              <a
-                href="https://lexingtonthemes.com/"
-                class="hover:text-black">
-                CallSupport
-              </a>
+              founders@callsupport.ai
             </li>
           </ul>
         </div>
@@ -119,13 +115,6 @@
           <ul
             role="list"
             class="mt-4 space-y-1">
-            <li>
-              <a
-                href="https://x.com/lexingtonthemes"
-                class="hover:text-black">
-                @lexingtonthemes
-              </a>
-            </li>
             <li>
               <a
                 href="https://x.com/callsupport"
@@ -144,11 +133,7 @@
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-6">
     <div class="border-t pt-6 border-gray-200">
       <p class="text-sm text-neutral-600 lg:col-span-2">
-        © 2024 CallSupport. All rights reserved. CallSupport runs the biggest and best AI Voice Agents in the world<a
-          class="text-sm text-black hover:text-accent-400 underline"
-          href="https://michaelandreuzza.com/"
-          >Michael Andreuzza</a
-        > 
+        © 2024 CallSupport. All rights reserved. CallSupport runs the biggest and best AI Voice Agents in the world
       </p>
     </div>
   </div>
