--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -74,7 +74,7 @@
             </li> -->
             <li>
               <a
-                href="/signup"
+                href="https://app.callsupport.ai"
                 class="hover:text-black">
                 Sign In
               </a>
