--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -53,14 +53,14 @@
 
         <div class="inline-flex items-center gap-2 list-none lg:ml-auto">
           <a
-            href="/signup"
+            href="https://app.callsupport.ai/login"
             class="block px-4 py-2 mt-2 text-sm font-medium text-black md:mt-0 hover:text-accent-400 focus:outline-none focus:shadow-outline">
-            Sign up
+            Login
           </a>
           <a
-            href="/login"
+            href="https://app.callsupport.ai/signup"
             class="inline-flex items-center h-8 justify-center px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-lg group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-gray-50 active:bg-gray-200 active:text-accent-400 focus-visible:outline-black">
-            Log in
+            Get Started
           </a>
         </div>
       </nav>
