--- a/src/components/Forms/Login.astro
+++ b/src/components/Forms/Login.astro
@@ -103,7 +103,7 @@
               <p class="font-medium text-sm leading-tight text-black">
                 Not a member? <a
                   class="text-accent-500 hover:text-accent-400 ml-3"
-                  href="/signup">Sign up now</a
+                  href="https://app.callsupport.ai">Sign up now</a
                 >
               </p>
             </div>
