--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -107,11 +107,10 @@
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
-                  Production-ready
+                Qualifying Leads
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
-                I tested the template in the latest versions of all browsers to
-                handle lots of edge-cases you might encounter.
+                Screen potential clients
               </div>
             </div><div>
               <div>
@@ -126,12 +125,11 @@
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
-                  Simple deploys
+                  Claims, policy help, support
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
-                The template is ready for production and can be deployed
-                anywhere static websites can, such as Vercel, Netlify, or GitHub
-                Pages, and more.
+                Claims, policy help, support for companies
+                Property inquiries, viewings for Realtors
               </div>
             </div>
           </div>
