Make changes to landing page

--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -89,7 +89,7 @@
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
-                  Customer Feedback Collection
+                  Ecommerce
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
                 Collect automatic feedback from customers after every call
