--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -7,13 +7,10 @@
         <div>
           <p
             class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display">
-            Multilayered security
+            100s of Usecases
           </p>
           <p class="text-base mt-4 text-gray-500">
-            The template is ready for production and can be deployed anywhere
-            static websites can, such as Vercel, Netlify, or GitHub Pages. I
-            tested the template in the latest versions of all browsers to handle
-            lots of edge-cases you might encounter.
+            100s of usecases from Ecommerce, Clinics, Dentists, Healthcare, Real State, Solar, Car Dealership, Restaurant
           </p>
         </div>
       </div>
@@ -41,7 +38,7 @@
             ></ion-icon>
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-            Customer feedback collection
+          Ecommerce
           </p>
         </div><p class="text-gray-500 text-sm mt-4">
           Everything I build is keyboard accessible, and I meticulously write
@@ -59,7 +56,7 @@
             ></ion-icon>
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-            Designers go-to app
+            Healthcare
           </p>
         </div><p class="text-gray-500 text-sm mt-4">
           I tested the template in the latest versions of all browsers to handle
@@ -77,7 +74,7 @@
             ></ion-icon>
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-            Easy onboarding
+            Real State
           </p>
         </div><p class="text-gray-500 text-sm mt-4">
           The template is ready for production and can be deployed anywhere
