--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -310,7 +310,7 @@
             </p>
           </div>
           <footer class="mt-8">
-            <p class="lg:text-sm text-gray-500 font-display">Emily R</p>
+            <p class="lg:text-sm text-gray-500 font-display">Saad Saeed</p>
             <img class="h-8 mt-4" src="/assets/brands/Figma.svg" alt="" />
           </footer>
         </div>
