--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -53,6 +53,13 @@
             </li>
             <li>
               <a
+                href="/affiliate"
+                class="hover:text-black">
+                Affiliate
+              </a>
+            </li>
+            <li>
+              <a
                 href="/terms"
                 class="hover:text-black">
                 Terms
