--- a/src/components/infopages/Affiliate.astro
+++ b/src/components/infopages/Affiliate.astro
@@ -20,13 +20,22 @@
       </div>
       <p
         class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8">
-        Become an Affiliate with CallSupport
+        AI Phone Calls just like Humans
       </p>
       <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
-        Earn 35% commission by recommending CallSupport's services to others.
+        Automate all your phone calls with AI
       </p>
     </div>
-
+    <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
+ 
+      <a
+        class="items-center justify-center h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
+        href="https://docs.google.com/forms/d/e/1FAIpQLSc_udUyuq34HlWeXpv4XgWC_bg0P6AEO6cY3nHUIoTAhk-aGg/viewform?usp=sf_link"
+        target="_blank" 
+        rel="noopener noreferrer"
+        >Join our Affiliate Program  &nbsp; &rarr;
+      </a>
+    </div>
     <dl
       class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
       <div class="text-gray-500">
@@ -41,6 +50,7 @@
         <strong class="text-gray-700">AI Outbound calls</strong> ━ Boost lead generation with AI-driven outbound calls that qualify prospects, collect key details, and schedule follow-ups.
       </div>
     </dl>
+
   </div>
 </section>
 
@@ -56,7 +66,7 @@
           <p
             class="text-3xl font-normal tracking-tight text-black font-display"
           >
-            FAQs
+            Become an Affiliate with CallSupport
           </p>
           <p class="text-base mt-4 text-zinc-500">
             Earn 35% commission by recommending CallSupport's services to others.
