--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -41,6 +41,10 @@
           href="/#features">Features</a
         >
         <a
+        class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400 lg:ml-auto"
+        href="/affiliate">Affiliate</a
+      >
+        <a
           class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
           href="/#pricing">Pricing</a
         >
