--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,6 +9,16 @@ import Footer from "../components/global/Footer.astro";
 >
   <head>
     <BaseHead />
+    
+    <!-- Google Tag Manager (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1H8R29PCD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Y1H8R29PCD');
+    </script>
   </head>
   <body class="bg-white flex flex-col min-h-svh">
     <Navigation/>
