--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,8 +8,7 @@ import Footer from "../components/global/Footer.astro";
   class="scroll-smooth selection:bg-accent-500 selection:text-white no-touchevents hydrated"
 >
   <head>
-    <BaseHead />
-    
+    <script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/c09d1cedf170b.js" data-cmp-host="d.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
     <!-- Google Tag Manager (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1H8R29PCD"></script>
     <script>
@@ -18,6 +17,10 @@ import Footer from "../components/global/Footer.astro";
       gtag('js', new Date());
 
       gtag('config', 'G-Y1H8R29PCD');
+
+    <BaseHead />
+    
+
     </script>
   </head>
   <body class="bg-white flex flex-col min-h-svh">
