add demo and blogs

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,11 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Demo from "../components/infopages/Demo.astro";
+import Demo from "../components/infopages/Blog.astro";
 
 ---
 
 <BaseLayout>
 
-  <Demo />
+  <Blog />
 
 </BaseLayout>
