--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -60,6 +60,13 @@
             </li>
             <li>
               <a
+                href="/blog"
+                class="hover:text-black">
+                Blog
+              </a>
+            </li>
+            <li>
+              <a
                 href="/terms"
                 class="hover:text-black">
                 Terms
