--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Demo from "../components/infopages/Blog.astro";
+import Blog from "../components/infopages/Blog.astro";
 
 ---
 
