--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -20,7 +20,7 @@
           <img
             alt="Lexingtøn thumbnail"
             class="border border-gray-200 lg:rounded-3xl object-cover rounded shadow-2xl"
-            src="https://app.callsupport.ai"
+            src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"  
           />
         </div>
       </div>
