--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -30,7 +30,7 @@
  
       <a
         class="items-center justify-center h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
-        href="https://docs.google.com/forms/d/e/1FAIpQLSc_udUyuq34HlWeXpv4XgWC_bg0P6AEO6cY3nHUIoTAhk-aGg/viewform?usp=sf_link"
+        href="https://ai-automation.notion.site/12b597396420805ba84afa9f2832eee2"
         target="_blank" 
         rel="noopener noreferrer"
         >Join our Affiliate Program  &nbsp; &rarr;
